--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h4><a href="https://github.com/flyingsaucer11">Redirect to github</a></h4>
+<h4><a href="https://github.com/flyingsaucer11">Redirect to Github</a></h4>
+<h4><a href="https://www.linkedin.com/in/12b8b0222/">Redirect to LinkedIn</a></h4>
 <p></p>
 </body>
 </html>
